excluído a main, e alterado <img>

--- a/public/index.html
+++ b/public/index.html
@@ -13,20 +13,17 @@
     </title>
   </head>
   <body>
-    <main>
-      <div>
-        <img id="bemVindo" src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=47&duration=1500&pause=750&color=CF8C34&width=435&height=100&lines=Seja+bem+vindo!" alt="Typing SVG" />
-        <aside><img id="img" src="assets/images/tiger.jpg" alt="tiger"/></aside>
-        <form id="form" action="">
-        <h1><strong>SISTEMA DE RECADOS</strong></h1>
-        <input type="email" name="email" id="email" class="input-login" placeholder="E-mail:">
-        <input type="password" name="password" id="password" class="input-login" placeholder="Senha:">
-        <input type="button" id="btnEntrar" class="btn-login" value="ENTRAR">
-        <a href="loginCreate.html"><strong>CRIAR CONTA</strong></a>
-        </form>
+    <img id="img-tiger" class="img-fluid" src="assets/images/tiger.jpg" alt="tiger"/>
+      <div id="container">
+          <img id="bemVindo" src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=47&duration=1500&pause=750&color=CF8C34&width=435&height=100&lines=Seja+bem+vindo!" alt="Typing SVG" />
+          <form id="form" action="">
+          <h1><strong>SISTEMA DE RECADOS</strong></h1>
+          <input type="email" name="email" id="email" class="input-login" placeholder="E-mail:">
+          <input type="password" name="password" id="password" class="input-login" placeholder="Senha:">
+          <input type="button" id="btnEntrar" class="btn-login" value="ENTRAR">
+          <a href="loginCreate.html"><strong>CRIAR CONTA</strong></a>  
+          </form>  
       </div>
-    </main>
-
     <script src="assets/js/index.js"></script>
   </body>
 </html>
