excluído a main, <img> com a class "img-fluid"

--- a/public/loginCreate.html
+++ b/public/loginCreate.html
@@ -13,9 +13,8 @@
     </title>
   </head>
   <body>
-    <main>
-      <div>
-        <aside><img id="img" src="assets/images/tiger.jpg" alt="tiger"/></aside>
+    <img id="img-tiger" class="img-fluid" src="assets/images/tiger.jpg" alt="tiger"/>
+      <div id="container">
         <form id="form" action="">
         <h1><strong>CRIAR CONTA</strong></h1>
         <input type="email" name="email" id="emailCreate" class="input-login" placeholder="E-mail:">
@@ -25,8 +24,6 @@
         <a href="index.html"><strong>Já criou sua conta? Clique aqui.</strong></a>
         </form>
       </div>
-    </main>
-
     <script src="assets/js/loginCreate.js"></script>
   </body>
 </html>
