</button> logout add class bootstrap;

--- a/public/messages.html
+++ b/public/messages.html
@@ -16,7 +16,6 @@
       <h1>Meus recados:</h1>
       <form class="form-inline">
           <div class="form-group mb-2">
-        
             <input type="text" class="form-control" id="contato" value="" placeholder="Contato">
           </div>
           <div class="form-group mx-sm-3 mb-2">
@@ -42,14 +41,13 @@
     </div>
   </div>
 
-  <button type="button" id="logout">Logout</button>
+  <button type="button" id="logout" class="btn btn-primary mb-2">Logout</button>
 <!--Modal-->
 <div id="modal">
   <div id="modalEdit">
     <h1>Editando...</h1>
     <form class="form-inline">
         <div class="form-group mb-2">
-      
           <input type="text" class="form-control" id="contatoEdit" value="" placeholder="Contato">
         </div>
         <div class="form-group mx-sm-3 mb-2">
